--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pyrogram==1.3.4
-pymongo==3.12.1
-python-telegram-bot==20.7
+pyrogram
+pymongo
+python-telegram-bot
+psutil
 Flask
 gunicorn
 Jinja2
